--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="index.html" class="active"><i class="icon-user"></i> Profile</a></li>
         <li><a href="skills.html"><i class="icon-trophy"></i> Skills</a></li>
         <li><a href="research.html"><i class="icon-picture"></i> Research</a></li>
-		li><a href="publication.html"><i class="icon-doc-text"></i> Publication</a></li>
+		<li><a href="publication.html"><i class="icon-doc-text"></i> Publication</a></li>
         <li><a href="resume.html"><i class="icon-doc-text"></i> Resume</a></li>
       </ul>
       <div class="nav-collapse collapse"></div>
@@ -29,7 +29,7 @@
   <div class="span5">
     <h1>ASHUTOSH PATEL</h1>
     <h3> </h3>
-    <p> Hello I am Juan Dela Cruz Web and Graphics Designer from Philipines. If yopu have something to be done just call my name and I will be there. :-) </p>
+    <p> Hello </p>
     <a href="#" class="hire-me"><i class="icon-paper-plane"></i> Hire Me </a> </div>
 </div>
 <div class="row social">
@@ -44,7 +44,7 @@
 </div>
 <div class="footer" href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
   <div class="container">
-    <p class="pull-left"><a href="http://dzyngiri.com">www.dzyngiri.com</a></p>
+    <p class="pull-left"><a href="http://ashutoshpatel.com">www.ashutoshpatel.com</a></p>
     <p class="pull-right"><a href="#myModal" role="button" data-toggle="modal"> <i class="icon-mail"></i> CONTACT</a></p>
   </div>
 </div>
