--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>ASHUTOSH PATEL</h1>
     <h3> </h3>
     <p> Hello </p>
-    <a href="#" class="hire-me"><i class="icon-paper-plane"></i> Hire Me </a> </div>
+    <a href="#" class="hi"><i class="icon-paper-plane"></i> Hi </a> </div>
 </div>
 <div class="row social">
   <ul class="social-icons">
