--- a/resume.html
+++ b/resume.html
@@ -26,7 +26,7 @@
 <div class="container resume">
   <h2>My Resume</h2>
   <h3>You can download my resume for your reference and I hope that we will meet very soon! :)</h3>
-  <div class="btn-center"> <a href="#" class="hire-me"><i class="icon-download"></i> Download Resume</a>
+  <div class="btn-center"> <a href="#" class="hi"><i class="icon-download"></i> Download Resume</a>
     <h2>125kb</h2>
   </div>
 </div>
