--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="span5">
     <h1>ASHUTOSH PATEL</h1>
     <h3> </h3>
-    <p> Hello </p>
+    <p> Hello everyone </p>
     <a href="#" class="hi"><i class="icon-paper-plane"></i> Hi </a> </div>
 </div>
 <div class="row social">
