--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="#">Download CV</a>
+			<a class="downlad-btn" href="https://www.dropbox.com/s/head1b8699s8v7v/CV_ashutosh.pdf?dl=0">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
