--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="https://www.dropbox.com/s/head1b8699s8v7v/CV_ashutosh.pdf?dl=0">Download CV</a>
+			<a class="downlad-btn" href="https://doc-0o-2c-docs.googleusercontent.com/docs/securesc/ha0ro937gcuc7l7deffksulhg5h7mbp1/c6oefrn9lk334oi87371dpf0cjvofs0a/1530468000000/01896672426452130727/*/1uyiJCOGS3Rg13YPwvXFjhhyEC8C4Rifi?e=download">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
