--- a/index.html
+++ b/index.html
@@ -222,7 +222,40 @@
 		
 	</section><!-- about-section -->
 
+	<section class="scholarship-section section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4">
+					<div class="heading">
+						<h3><b>Scholarship</b></h3>
+						<h6 class="font-lite-black"><b> </b></h6>
+					</div>
+				</div><!-- col-sm-4 -->
+				<div class="col-sm-8">
+					<div class="education-wrapper">
+						<div class="education margin-b-50">
+							<h4><b>GATE</b></h4>
+							<h5 class="font-yellow"><b>Mechanical</b></h5>
+							<h6 class="font-lite-black margin-t-10">2014</h6>
+							<p class="margin-tb-30">   </p>
+						</div><!-- education -->
 
+
+						<div class="education margin-b-50">
+							<h4><b>CSIR-UGC NET</b></h4>
+							<h5 class="font-yellow"><b>Engineering Science</b></h5>
+							<h6 class="font-lite-black margin-t-10">Dec-2014</h6>
+							<p class="margin-tb-30">   </p>
+						</div><!-- education -->
+						
+					</div><!-- education-wrapper -->
+				</div><!-- col-sm-8 -->
+			</div><!-- row -->
+		</div><!-- container -->
+		
+	</section><!-- about-section -->
+	
+	
 
 <section class="PUBLUCATION-section section">
 		<div class="container">
