--- a/index.html
+++ b/index.html
@@ -194,22 +194,22 @@
 				<div class="col-sm-8">
 					<div class="education-wrapper">
 						<div class="education margin-b-50">
-							<h4><b>PhD in Mechanical Engineering</b></h4>
-							<h5 class="font-yellow"><b>Indian Institute of Science (IISc) Bangalore, IN</b></h5>
+							<h4><b>PhD Research Scholar</b></h4>
+							<h5 class="font-yellow"><b>Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, IN</b></h5>
 							<h6 class="font-lite-black margin-t-10">JANUARY 2018 - PRESENT</h6>
 							<p class="margin-tb-30">   </p>
 						</div><!-- education -->
 
 
 						<div class="education margin-b-50">
-							<h4><b>MASTER OF SCIENCE (by Research) in Engineering</b></h4>
-							<h5 class="font-yellow"><b>Indian Institute of Technology (IIT) Mandi, IN</b></h5>
+							<h4><b>MS (by Research)</b></h4>
+							<h5 class="font-yellow"><b>School of Engineering, Indian Institute of Technology (IIT) Mandi, IN</b></h5>
 							<h6 class="font-lite-black margin-t-10">AUGUST 2014 - MAY 2017</h6>
 							<p class="margin-tb-30">   </p>
 						</div><!-- education -->
 						
 						<div class="education margin-b-50">
-							<h4><b>BACHELOR OF ENGINEERING IN MECHANICAL</b></h4>
+							<h4><b>BE (Mechanical)</b></h4>
 							<h5 class="font-yellow"><b>OP JINDAL INSTITUTE OF TECHNOLOGY, Raigarh, IN</b></h5>
 							<h6 class="font-lite-black margin-t-10">AUGUST 2010 - MAY 2014</h6>
 							<p class="margin-tb-30">   </p>
