--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
 						<ul class="information margin-tb-30">
 						</ul>
 						<ul class="social-icons">
-							<li><a href="#"><i class="ion-social-pinterest"></i></a></li>
-							<li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-							<li><a href="#"><i class="ion-social-instagram"></i></a></li>
-							<li><a href="#"><i class="ion-social-facebook"></i></a></li>
-							<li><a href="#"><i class="ion-social-twitter"></i></a></li>
+							<li><a href="https://scholar.google.co.in/citations?user=LXh0SNcAAAAJ&hl=en"><i class="ion-social-pinterest"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/ashutosh-patel-94481b89/"><i class="ion-social-linkedin"></i></a></li>
 						</ul>
 					</div><!-- intro -->
 				</div><!-- col-sm-8 -->
