--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</div><!-- row -->
 			</div><!-- heading-wrapper -->
 			
-			<a class="downlad-btn" href="https://drive.google.com/uc?id=1c1JLIruhc3e_qTGIPXen75go2dNzXwi3&export=download">Download CV</a>
+			<a class="downlad-btn" href="https://drive.google.com/uc?id=1u_dMLv8snTJPh6bajuA94PBENZrerOmB&export=download">Download CV</a>
 		</div><!-- container -->
 	</header>
 	
@@ -309,10 +309,9 @@
 
 					<div class="PUBLUCATION margin-b-50">
 						<h4><a href="http://publons.com/a/1284123" target="_blank"> <b>REVIEWER</b></a></h4>
-						<h5 class="font-yellow"><i>Measurement Science and Technology - IOPscience
-</i></h5>
-						<h5 class="font-blue"><i>Instrumentation science and technology - Taylor & Francis</i>
-</h5>
+						<h5 class="font-yellow"><i>Review of Scientific Instruments - AIP Publishing</i></h5>
+						<h5 class="font-yellow"><i>Measurement Science and Technology - IOPscience</i></h5>
+						<h5 class="font-blue"><i>Instrumentation science and technology - Taylor & Francis</i></h5>
 					</div><!-- PUBLUCATION -->
 				
 				
