--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 		<div class="portfolioContainer">
 			
 			
-			<div class="p-item graphic-design">
-				<a href="images/portfolio-4-600x400.jpg" data-fluidbox>
-					<img src="images/portfolio-4-600x400.jpg" alt=""></a>
+			<div class="p-item p-item-2 graphic-design">
+				<a class="img" href="images/portfolio-8-300x400.jpg" data-fluidbox>
+					<img src="images/portfolio-8-300x400.jpg" alt=""></a>
 			</div><!-- p-item -->	
 			
 			<div class="p-item p-item-2 graphic-design">
