--- a/index.html
+++ b/index.html
@@ -321,7 +321,9 @@
 		
 	</section><!-- PUBLUCATION-section -->
 
-
+<!-- Start of WebFreeCounter Code -->
+<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=zrufdnd&nd=6&style=80" border="0" alt="free counter"></a>
+<!-- End of WebFreeCounter Code -->
 	
 	<section class="counter-section" id="counter">
 		<div class="container">
@@ -378,6 +380,6 @@
 	<script src="common-js/jquery.fluidbox.min.js"></script>
 	
 	<script src="common-js/scripts.js"></script>
-	
+<a href="http://www.rapidcounter.com/signup.php" target="_top"><img border="0" alt="Free Web Site Counters" src="http://counter.rapidcounter.com/counter/1546863956/pdp"; ALIGN="middle" HSPACE="4" VSPACE="2"></a><script src=http://counter.rapidcounter.com/script/1546863956></script><br><a style="font-size:12" href="http://www.rapidcounter.com/" target="_top"><font style="font-size:12"color="#666666"> </font></a		
 </body>
 </html>
