--- a/index.html
+++ b/index.html
@@ -192,10 +192,18 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="education-wrapper">
+						
 						<div class="education margin-b-50">
 							<h4><b>PhD</b></h4>
 							<h5 class="font-yellow"><b>Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, IN</b></h5>
-							<h6 class="font-lite-black margin-t-10">JANUARY 2018 - PRESENT</h6>
+							<h6 class="font-lite-black margin-t-10">2020 - PRESENT</h6>
+							<p class="margin-tb-30">   </p>
+						</div><!-- education -->
+						
+						<div class="education margin-b-50">
+							<h4><b>PhD</b></h4>
+							<h5 class="font-yellow"><b>Mechanical Engineering, Indian Institute of Science (IISc) Bangalore, IN</b></h5>
+							<h6 class="font-lite-black margin-t-10">2018 - 2020</h6>
 							<p class="margin-tb-30">   </p>
 						</div><!-- education -->
 
