--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
 	
 	<header>
 		<div class="container">
-			<!-- Start of WebFreeCounter Code -->
-			<a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=zmuefdnf&nd=6&style=7" border="0" alt="web counter"></a>
-			<!-- End of WebFreeCounter Code -->
 			<div class="heading-wrapper">
 				<div class="row">
 					<div class="col-sm-6 col-md-6 col-lg-4">
@@ -353,6 +350,12 @@
 				
 			</div><!-- row-->
 		</div><!-- container-->
+		
+	<div class="col-sm-6 col-md-6 col-lg-3">
+<div class="counter margin-b-30">
+<div id="sfc7phndmj34lj19aese79ztett8dg8bar7"></div><script type="text/javascript" src="https://counter6.stat.ovh/private/counter.js?c=7phndmj34lj19aese79ztett8dg8bar7&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="counter for my website"><img src="https://counter6.stat.ovh/private/freecounterstat.php?c=7phndmj34lj19aese79ztett8dg8bar7" border="0" title="counter for my website" alt="counter for my website"></a></noscript>
+</div><!-- col-md-3--> 	
+		
     </section><!-- counter-section-->
 	
 	
