--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@
 				<div class="col-sm-8">
 					<div class="experience margin-b-50">
 						<h4><b>SENIOR RESEARCH FELLOW, IISc Bangalore</b></h4>
-						<h5 class="font-yellow"><b>Fluid Structure Interaction</b></h5>
+						<h5 class="font-yellow"><b>ROTORDYNAMICS, EXPERIMENTAL AND NUMERICAL ANALYSIS OF AEROSTATIC THRUST BEARING</b></h5>
 						<h6 class="margin-t-10">2020 - PRESENT</h6>
 						<p class="font-semi-white margin-tb-30">  </p>
 					</div><!-- experience -->				
 					<div class="experience margin-b-50">
 						<h4><b>JUNIOR RESEARCH FELLOW, IISc Bangalore</b></h4>
-						<h5 class="font-yellow"><b>Fluid Structure Interaction</b></h5>
+						<h5 class="font-yellow"><b>ROTORDYNAMICS, EXPERIMENTAL AND NUMERICAL ANALYSIS OF AEROSTATIC THRUST BEARING</b></h5>
 						<h6 class="margin-t-10">2018 - 2020</h6>
 						<p class="font-semi-white margin-tb-30">  </p>
 					</div><!-- experience -->
