--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
 				<a class="img" href="images/portfolio-8-300x400.jpg" data-fluidbox>
 					<img src="images/portfolio-8-300x400.jpg" alt=""></a>
 			</div><!-- p-item -->
-			
+
+			<div class="p-item p-item-2 graphic-design">
+				<a class="img" href="images/displacementsensorcalibartionsetup.jpg" data-fluidbox>
+					<img src="images/displacementsensorcalibartionsetup.jpg" alt=""></a>
+			</div><!-- p-item -->
 			
 		
 		
