--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
 						<h5 class="font-yellow"><i>Measurement Science and Technology - IOPscience</i></h5>
 						<h5 class="font-blue"><i>Instrumentation science and technology - Taylor & Francis</i></h5>
 						<h5 class="font-yellow"><i>Applied Physics Letters - AIP Publishing</i></h5>
+						<h5 class="font-blue"><i>Materials Research Express - IOPscience</i></h5>
 					</div><!-- PUBLUCATION -->
 			
 				
