--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
 					<div class="PUBLUCATION margin-b-50">
 						<h4><b>PATENTS</b></h4>
 
-						<h5 class="font-lite-black">1. <b>A. Patel</b>, K. N. V. Prasad, P Kumar, and G. Narayanan, A TEST RIG FOR DETERMINING CHARACTERISTICS OF A GAS-FILM THRUST BEARING, (<i>Indian Patent application number: <b>202341072301)</b></i></h5>
+						<h5 class="font-black">1. <b>A. Patel</b>, K. N. V. Prasad, P Kumar, and G. Narayanan, A TEST RIG FOR DETERMINING CHARACTERISTICS OF A GAS-FILM THRUST BEARING, (<i>Indian Patent application number: <b>202341072301)</b></i></h5>
 						<h5 class="font-lite-black">2. K. N. V. Prasad, <b>A. Patel</b>, P Kumar, and G. Narayanan, HIGH TEMPERATURE FIGURE OF MERIT MEASUREMENT SET-UP, (<i>Indian Patent application number: <b>202341072423)</b></i></h5>
-						<h5 class="font-lite-black">3. <b>A. Patel</b> and S. K. Pandey, A TEST RIG FOR DETERMINING CHARACTERISTICS OF A MAGNETIC THRUST BEARING AND A SYSTEM THEREOF, (<i>Indian Patent application number: <b>201711027576)</b></i></h5>
+						<h5 class="font-black">3. <b>A. Patel</b> and S. K. Pandey, A TEST RIG FOR DETERMINING CHARACTERISTICS OF A MAGNETIC THRUST BEARING AND A SYSTEM THEREOF, (<i>Indian Patent application number: <b>201711027576)</b></i></h5>
 						<p class="font-semi-white margin-tb-30"></p>
 						<ul class="list margin-b-30">
 						</ul>
