--- a/index.html
+++ b/index.html
@@ -272,7 +272,6 @@
 				<div class="col-sm-4">
 					<div class="heading">
 						<h3><b>Professional and Academic Involvement</b></h3>
-
 					</div>
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
@@ -283,24 +282,24 @@
 							<h5 class="font-yellow"><b>Indian Institute of Technology (IIT) Mandi, IN</b></h5>
 							<h6 class="font-lite-black margin-t-10">2016 - 2017</h6>
 							<p class="margin-tb-30">   </p>
-						</div><!-- education -->
+						</div><!-- Involvement -->
 
 
-						<div class="education margin-b-50">
+						<div class="Involvement margin-b-50">
 							<h4><b>Treasurer</b></h4>
 							<h5 class="font-yellow"><b>Hindi Samiti (informal student body at IISc)</b></h5>
 							<h6 class="font-lite-black margin-t-10">2019 - 2020</h6>
 							<p class="margin-tb-30">   </p>
-						</div><!-- education -->
+						</div><!-- Involvement -->
 						
-						<div class="education margin-b-50">
+						<div class="Involvement margin-b-50">
 							<h4><b>Stuedent Representative, Department Curriculum Committee (DCC)</b></h4>
 							<h5 class="font-yellow"><b>Department of Mechanical Engineering, IISc Bangalore, IN</b></h5>
 							<h6 class="font-lite-black margin-t-10">2020 - 2021</h6>
 							<p class="margin-tb-30">   </p>
-						</div><!-- education -->
+						</div><!-- Involvement -->
 						
-					</div><!-- education-wrapper -->
+					</div><!-- Involvement-wrapper -->
 				</div><!-- col-sm-8 -->
 			</div><!-- row -->
 		</div><!-- container -->
@@ -354,7 +353,7 @@
 						<h4><b>Peer-Reviewed Conference Publications</b></h4>
 						<h5 class="font-lite-black margin-t-10"><a href="https://doi.org/10.1063/1.4980407" target="_blank"> 1. <b>A. Patel</b>, S. Sisodia, and S. K. Pandey. Interfacing of High Temperature Z meter Setup Using Python. <i>AIP Conference Proceedings</i>, <b>1832</b>, 1, 060002 (2017).</h5></a>
 						<h5 class="font-black margin-t-10"><a href="https://doi.org/10.1109/IICPE.2018.8709529" target="_blank"> 2. S. Narchail, C. Urabinahatti, S. Srivatsa, <b>A. Patel</b>, S. S. Ahmad, P. Kumar, and G. Narayanan. Experimental Investigations on a High-Speed Rotor for a Switched Reluctance Machine. <i>2018 8th IEEE India International Conference on Power Electronics (IICPE)</i>, 1-6 (2018).</h5></a>
-						<h5 class="font-lite-black margin-t-10"><a href="https://doi.org/10.1115/GTINDIA2019-2643" target="_blank"> 3. <b>A. Patel</b>, A. K. Balasubramanian, V. Biradar, S. Srivatsa, P. Kumar, and V. R. Sonti. Analysis of Aerostatic Thrust Bearing for S-CO2 Turbomachinery. <i>Gas Turbine India Conference</i>, <b>83525</b>, V001T05A015 (2019).</h5></a>
+						<h5 class="font-lite-black margin-t-10"><a href="https://doi.org/10.1115/GTINDIA2019-2643" target="_blank"> 3. <b>A. Patel</b>, A. K. Balasubramanian, V. Biradar, S. Srivatsa, P. Kumar, and V. R. Sonti. Analysis of Gas-Film Thrust Bearing for S-CO2 Turbomachinery. <i>Gas Turbine India Conference</i>, <b>83525</b>, V001T05A015 (2019).</h5></a>
 						<h5 class="font-black margin-t-10"><a href="https://doi.org/10.1063/1.5113453" target="_blank"> 4. S. Singh, S. Singh, <b>A. Patel</b>, and S. K. Srivastav. Investigation of thermoelectric properties of LaFe0.1Co0.9O3 compound. <i>AIP Conference Proceedings</i>, <b>2115</b>, 1, 030614 (2019).</h5></a>
 						<h5 class="font-lite-black margin-t-10"><a href="https://doi.org/10.1615/IHMTC-2019.30" target="_blank"> 5. <b>A. Patel</b> and P. Kumar. Analytical Analysis of Aerostatic Thrust Bearing in Adiabatic and Isothermal Condition. <i>Proceedings of the 25th National and 3rd International ISHMT-ASTFE Heat and Mass Transfer Conference (IHMTC-2019)</i>, 14-18 (2019).</h5></a>
 						<h5 class="font-black margin-t-10"><a href="https://doi.org/10.1115/GTINDIA2021-76448" target="_blank"> 6. <b>A. Patel</b>, V. Biradar, and P. Kumar.  Harmonic analysis of the high speed direct coupled sco2 turbo-generator. <i>Gas Turbine India Conference 2021</i>.</h5></a>
