--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
 
 
 						<div class="Involvement margin-b-50">
-							<h4><b>Treasurer</b></h4>
-							<h5 class="font-yellow"><b>Hindi Samiti (informal student body at IISc)</b></h5>
+							<h4><b>Treasurer, Hindi Samiti (An informal student body)</b></h4>
+							<h5 class="font-yellow"><b>IISc Bangalore</b></h5>
 							<h6 class="font-lite-black margin-t-10">2019 - 2020</h6>
 							<p class="margin-tb-30">   </p>
 						</div><!-- Involvement -->
