--- a/index.html
+++ b/index.html
@@ -165,9 +165,15 @@
 				</div><!-- col-sm-4 -->
 				<div class="col-sm-8">
 					<div class="experience margin-b-50">
+						<h4><b>SENIOR ENGINEER, RESEARCH & DEVELOPEMENT, Garrett Motion</b></h4>
+						<h5 class="font-yellow"><b>Vibration and Fatigue Analysis</b></h5>
+						<h6 class="margin-t-10">2024 - Present</h6>
+						<p class="font-semi-white margin-tb-30">  </p>
+					</div><!-- experience -->
+					<div class="experience margin-b-50">
 						<h4><b>SENIOR RESEARCH FELLOW, IISc Bangalore</b></h4>
 						<h5 class="font-yellow"><b>ROTORDYNAMICS, EXPERIMENTAL AND NUMERICAL ANALYSIS OF AEROSTATIC THRUST BEARING</b></h5>
-						<h6 class="margin-t-10">2020 - PRESENT</h6>
+						<h6 class="margin-t-10">2020 - 2024</h6>
 						<p class="font-semi-white margin-tb-30">  </p>
 					</div><!-- experience -->				
 					<div class="experience margin-b-50">
