--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
 					<div class="PUBLUCATION margin-b-50">
 						<h4><b>PATENTS</b></h4>
-
+						<h5 class="font-black">1. <b>A METHOD FOR MONITORING A MULTI-ORIFICE FLUID-FILM THRUST BEARING AND A SYSTEM THEREOF, (<i>Indian Patent application number: <b>202541006637)</b></i></h5>
 						<h5 class="font-black">1. <b>A TEST RIG FOR DETERMINING CHARACTERISTICS OF A GAS-FILM THRUST BEARING, (<i>Indian Patent application number: <b>202341072301)</b></i></h5>
 						<h5 class="font-lite-black">2. A TEST RIG FOR DETERMINING CHARACTERISTICS OF A MAGNETIC THRUST BEARING AND A SYSTEM THEREOF, (<i>Indian Patent application number: <b>202341072423)</b></i></h5>
 						<h5 class="font-black">3. HIGH TEMPERATURE FIGURE OF MERIT MEASUREMENT SET-UP, (<i>Indian Patent application number: <b>201711027576)</b></i></h5>
